# qspreadsheet

./: .flake8  .gitignore  .pylintrc  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  va.bat
.github/workflows/: tests.yaml
qspreadsheet/: __init__.py  _ndx.py  common.py  custom_widgets.py  dataframe_model.py  dataframe_view.py  delegates.py  header_view.py  menus.py  qt.py  richtextlineedit.py  sort_filter_proxy.py  worker.py
src/: example.py  helpers.py
src/qspreadsheet/: constants.py  index_model.py  index_view.py  logging.py  qt.py  table_model.py  table_view.py  table_widget.py  types.py
tests/: conftest.py  test_imports.py  test_table_view.py  test_table_widget.py  util.py
