[build-system]
requires = ["setuptools>=49.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=qspreadsheet"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "numpy",
    "six",
    "PySide2",
]
ignore_missing_imports = true

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']