[metadata]
name = qspreadsheet
description = Package used to show and edit pandas DataFrame in GUI
version = 0.0.1
author = Stanislav Sabev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.9

[options]
packages = qspreadsheet
install_requires = 
    numpy >= 1.19.0
    pandas >= 1.0.5
    PySide2 >= 5.15.2
python_requires = >=3.7.5
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pylint>=2.12.2
    pytest>=7.0.1
    pytest-cov>=3.0.0
    mock>=4.0.3
    yapf>=0.32.0
    mypy>=0.942

[options.package_data]
qspreadsheet = py.typed