[metadata]
name = qspreadsheet
description = Package used to show and edit pandas DataFrame in GUI
version = 0.0.1
author = Stanislav Sabev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9

[options]
packages =
    qspreadsheet
install_requires = 
    numpy >= 1.19.0
    pandas >= 1.0.5
    PySide2 >= 5.15.2
python_requires = >=3.7.9
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=7.0.1
    pytest-cov>=3.0.0
    mock>=4.0.3
    autopep8>=1.6.0
    mypy>=0.942
    flake8>=4.0.1
    Flake8-pyproject>=0.9.0
    tox>=3.24.5

[options.package_data]
qspreadsheet = py.typed

[flake8]
exclude =
    __pycache__,
    venv,
    qt.py
max-line-length = 99
count = true
max-complexity = 10
# ignore = E231,E241
# per-file-ignores =
#     __init__.py: F401